# Fake-News-Detection

fake_news/: model1.py  pyproject.toml  requirements.txt
