[tool.poetry]
name = "fake-news-detection"
version = "0.1.0"
description = "A Python project to detect fake news using ML"
authors = ["M. Pattabhi Venkanna "]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]
python = "^3.13"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.1"
numpy = "^1.26"
scikit-learn = "^1.3"
flask = "^2.3"
gunicorn = "^21.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
